--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: "Dissecting the Fidelity of Mobile App Testing on Virtualized Devices: Experience and Enhancement"
+title: "Virtual Device Farms for Mobile App Testing at Scale: A Pursuit for Fidelity, Efficiency, and Accessibility"
 markdown: kramdown
